tests/NormalTests/paczka1/fuzzy1/64164120.err
Error in line 1: ncFr6pn A398 61,4
Error in line 13: ncFr6pn S785 66,4
Error in line 20: ncFr6pn S590 100,95
Error in line 21: dzpDlcJ S785 90,68
Error in line 16: ncFr6pn S590 53,2
Error in line 22: RePUc S590 87,2
